chorus.h: Consistently define *_DEBUGGING_INFO with the value 1.
* config/chorus.h: Consistently define *_DEBUGGING_INFO with
the value 1.  Do not undef before defining.
* config/darwin.h: Likewise.
* config/dbx.h: Likewise.
* config/dbxcoff.h: Likewise.
* config/dbxelf.h: Likewise.
* config/elfos.h: Likewise.
* config/interix.h: Likewise.
* config/lynx-ng.h: Likewise.
* config/lynx.h: Likewise.
* config/netware.h: Likewise.
* config/psos.h: Likewise.
* config/svr3.h: Likewise.
* config/alpha/alpha.h: Likewise.
* config/alpha/elf.h: Likewise.
* config/alpha/vms.h: Likewise.
* config/arc/arc.h: Likewise.
* config/arm/aout.h: Likewise.
* config/arm/coff.h: Likewise.
* config/c4x/c4x.h: Likewise.
* config/h8300/h8300.h: Likewise.
* config/i386/cygwin.h: Likewise.
* config/i386/djgpp.h: Likewise.
* config/i386/gas.h: Likewise.
* config/i386/gstabs.h: Likewise.
* config/i386/i386-coff.h: Likewise.
* config/i386/i386-interix.h: Likewise.
* config/i386/sco5.h: Likewise.
* config/i386/svr3dbx.h: Likewise.
* config/i386/sysv3.h: Likewise.
* config/i386/win32.h: Likewise.
* config/i386/x86-64.h: Likewise.
* config/i960/i960.h: Likewise.
* config/ia64/ia64.h: Likewise.
* config/ip2k/ip2k.h: Likewise.
* config/m32r/m32r.h: Likewise.
* config/m68k/3b1.h: Likewise.
* config/m68k/3b1g.h: Likewise.
* config/m68k/ccur-GAS.h: Likewise.
* config/m68k/coff.h: Likewise.
* config/m68k/hp2bsd.h: Likewise.
* config/m68k/hp310g.h: Likewise.
* config/m68k/hp320g.h: Likewise.
* config/m68k/hp3bsd.h: Likewise.
* config/m68k/hp3bsd44.h: Likewise.
* config/m68k/linux-aout.h: Likewise.
* config/m68k/m68k-aout.h: Likewise.
* config/m68k/mot3300.h: Likewise.
* config/m68k/netbsd.h: Likewise.
* config/m68k/openbsd.h: Likewise.
* config/m68k/pbb.h: Likewise.
* config/m68k/plexus.h: Likewise.
* config/m68k/sun2.h: Likewise.
* config/m68k/sun3.h: Likewise.
* config/m68k/tower-as.h: Likewise.
* config/m68k/vxm68k.h: Likewise.
* config/m88k/aout-dbx.h: Likewise.
* config/m88k/m88k-aout.h: Likewise.
* con

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,90 @@
+2002-08-29  Jason Thorpe  <thorpej@wasabisystems.com>
+
+	* config/chorus.h: Consistently define *_DEBUGGING_INFO with
+	the value 1.  Do not undef before defining.
+	* config/darwin.h: Likewise.
+	* config/dbx.h: Likewise.
+	* config/dbxcoff.h: Likewise.
+	* config/dbxelf.h: Likewise.
+	* config/elfos.h: Likewise.
+	* config/interix.h: Likewise.
+	* config/lynx-ng.h: Likewise.
+	* config/lynx.h: Likewise.
+	* config/netware.h: Likewise.
+	* config/psos.h: Likewise.
+	* config/svr3.h: Likewise.
+	* config/alpha/alpha.h: Likewise.
+	* config/alpha/elf.h: Likewise.
+	* config/alpha/vms.h: Likewise.
+	* config/arc/arc.h: Likewise.
+	* config/arm/aout.h: Likewise.
+	* config/arm/coff.h: Likewise.
+	* config/c4x/c4x.h: Likewise.
+	* config/h8300/h8300.h: Likewise.
+	* config/i386/cygwin.h: Likewise.
+	* config/i386/djgpp.h: Likewise.
+	* config/i386/gas.h: Likewise.
+	* config/i386/gstabs.h: Likewise.
+	* config/i386/i386-coff.h: Likewise.
+	* config/i386/i386-interix.h: Likewise.
+	* config/i386/sco5.h: Likewise.
+	* config/i386/svr3dbx.h: Likewise.
+	* config/i386/sysv3.h: Likewise.
+	* config/i386/win32.h: Likewise.
+	* config/i386/x86-64.h: Likewise.
+	* config/i960/i960.h: Likewise.
+	* config/ia64/ia64.h: Likewise.
+	* config/ip2k/ip2k.h: Likewise.
+	* config/m32r/m32r.h: Likewise.
+	* config/m68k/3b1.h: Likewise.
+	* config/m68k/3b1g.h: Likewise.
+	* config/m68k/ccur-GAS.h: Likewise.
+	* config/m68k/coff.h: Likewise.
+	* config/m68k/hp2bsd.h: Likewise.
+	* config/m68k/hp310g.h: Likewise.
+	* config/m68k/hp320g.h: Likewise.
+	* config/m68k/hp3bsd.h: Likewise.
+	* config/m68k/hp3bsd44.h: Likewise.
+	* config/m68k/linux-aout.h: Likewise.
+	* config/m68k/m68k-aout.h: Likewise.
+	* config/m68k/mot3300.h: Likewise.
+	* config/m68k/netbsd.h: Likewise.
+	* config/m68k/openbsd.h: Likewise.
+	* config/m68k/pbb.h: Likewise.
+	* config/m68k/plexus.h: Likewise.
+	* config/m68k/sun2.h: Likewise.
+	* config/m68k/sun3.h: Likewise.
+	* config/m68k/tower-as.h: Likewise.
+	* config/m68k/vxm68k.h: Likewise.
+	* config/m88k/aout-dbx.h: Likewise.
+	* config/m88k/m88k-aout.h: Likewise.
+	* config/mcore/mcore-elf.h: Likewise.
+	* config/mcore/mcore-pe.h: Likewise.
+	* config/mips/elf.h: Likewise.
+	* config/mips/elf64.h: Likewise.
+	* config/mips/iris5gas.h: Likewise.
+	* config/mips/iris6.h: Likewise.
+	* config/mips/mips.h: Likewise.
+	* config/mips/sni-gas.h: Likewise.
+	* config/mmix/mmix.h: Likewise.
+	* config/ns32k/netbsd.h: Likewise.
+	* config/pa/pa64-hpux.h: Likewise.
+	* config/romp/romp.h: Likewise.
+	* config/rs6000/sysv4.h: Likewise.
+	* config/rs6000/xcoff.h: Likewise.
+	* config/sh/coff.h: Likewise.
+	* config/sh/elf.h: Likewise.
+	* config/sparc/linux64.h: Likewise.
+	* config/sparc/liteelf.h: Likewise.
+	* config/sparc/netbsd.h: Likewise.
+	* config/sparc/openbsd.h: Likewise.
+	* config/sparc/pbd.h: Likewise.
+	* config/sparc/sp64-elf.h: Likewise.
+	* config/sparc/sp86x-elf.h: Likewise.
+	* config/sparc/sparc.h: Likewise.
+	* config/vax/vax.h: Likewise.
+	* config/vax/vaxv.h: Likewise.
+
 2002-08-29  "Dhananjay R. Deshpande" <dhananjayd@kpit.com>
 
 	* h8300.c (shift_alg_hi): Various tweaks to improve performance
