* diagnostic.c (fancy_abort): Don't repeat "internal error". 	* toplev.c (crash_signal): Likewise.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56669 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-30  Gabriel Dos Reis  <gdr@integrable-solutions.net>
+
+	* diagnostic.c (fancy_abort): Don't repeat "internal error".
+	* toplev.c (crash_signal): Likewise.
+
 Fri Aug 30 00:33:37 2002  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* doc/cpp.texi (__NEXT_RUNTIME__): Extended documentation.
