--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-30  Alan Modra  <amodra@bigpond.net.au>
+
+	* target.h (FFETARGET_32bit_longs): Don't define for powerpc64 or
+	mmix.
+
 2002-08-28  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* bugs.texi, news.texi: Update URLs for online news and bugs
