--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-29  Rodney Brown  <rbrown64@csc.com.au>
+
+	* doc/install.texi (Specific, alpha*-dec-osf*): Add "virtual
+	memory exhausted" workarounds.
+
 2002-08-30  Gabriel Dos Reis  <gdr@integrable-solutions.net>
 
 	* diagnostic.c (fancy_abort): Don't repeat "internal error".
