--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-30  Paul Koning  <pkoning@equallogic.com>
+
+	* MAINTAINERS: (Write After Approval): Add myself.
+
 2002-08-29  Geoffrey Keating  <geoffk@redhat.com>
 
 	* MAINTAINERS: Update Jason Eckhardt's address, remove i860.
