--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-08-30  Richard Henderson  <rth@redhat.com>
+
+	* c-objc-common.c: Include target.h.
+	(c_cannot_inline_tree_fn): Don't auto-inline functions that
+	don't bind locally.  Factor setting DECL_UNINLINABLE.
+	* Makefile.in (c-objc-common.o): Update.
+
 2002-08-30  Janis Johnson  <janis187@us.ibm.com>
 
 	* doc/install.texi (Configuration, Building): Fix a typo and
