--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2002-08-30  Richard Henderson  <rth@redhat.com>
+
+	* tree.c: Include target.h.
+	(cp_cannot_inline_tree_fn): Don't auto-inline functions that
+	don't bind locally.
+	* Makefile.in (tree.o): Update.
+
 2002-08-27  Mark Mitchell  <mark@codesourcery.com>
 
 	* class.c (layout_virtual_bases): Warn about bugs in G++ that
