--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,6 @@
 2002-08-30  Richard Henderson  <rth@redhat.com>
 
+	PR opt/7515
 	* c-objc-common.c: Include target.h.
 	(c_cannot_inline_tree_fn): Don't auto-inline functions that
 	don't bind locally.  Factor setting DECL_UNINLINABLE.
