--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,6 @@
 2002-08-30  Richard Henderson  <rth@redhat.com>
 
+	PR opt/7515
 	* tree.c: Include target.h.
 	(cp_cannot_inline_tree_fn): Don't auto-inline functions that
 	don't bind locally.
