--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-30  Jesse Rosenstock  <jmr@ugcs.caltech.edu>
+
+	* java/util/Calendar.java (getTimeInMillis, getTimeInMillis): Now
+	public, per 1.4 spec.  Fixes PR libgcj/7785.
+
 2002-08-30  Jeff Sturm  <jsturm@one-point.com>
 
 	* Makefile.in: Rebuilt.
