--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-31  Roger Sayle  <roger@eyesopen.com>
+	    Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* gcc.c-torture/execute/20020720-1.x: Skip test on
+	mmix-knuth-mmixware.  Correct comment.
+
 2002-08-27  Mark Mitchell  <mark@codesourcery.com>
 
 	* testsuite/g++.dg/abi/bitfield5.C: New test.
