* pa.c (pa_globalize_label): Add ATTRIBUTE_UNUSED to prototype.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56709 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-31  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* pa.c (pa_globalize_label): Add ATTRIBUTE_UNUSED to prototype.
+
 2002-08-30  Richard Henderson  <rth@redhat.com>
 
 	PR opt/7515
