--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-31  Richard Henderson  <rth@redhat.com>
+
+	* expr.c (block_move_libcall_safe_for_call_parm): Fix thinko.
+
 2002-08-31  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* pa.c (pa_globalize_label): Add ATTRIBUTE_UNUSED to prototype.
