--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-31  Jason Merrill  <jason@redhat.com>
+
+	* cp-lang.c (cp_expr_size): Don't abort.
+
 2002-08-27  Mark Mitchell  <mark@codesourcery.com>
 
 	* cp-tree.h (warn_abi): Declare it.
