--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-01  Marek Michalkiewicz  <marekm@amelek.gda.pl>
+
+	2002-08-13  Denis Chertykov  <denisc@overta.ru>
+	* config/avr/avr.md: Call CC_STATUS_INIT in all peepnoles
+	which can change CC0.
+
 2002-08-29  Rodney Brown  <rbrown64@csc.com.au>
 
         * doc/install.texi (Specific, alpha*-dec-osf*): Add "virtual
