--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-01  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/typeof-1.c: New test.
+	* g++.dg/ext/typeof2.C: New test.
+
 2002-08-27  Mark Mitchell  <mark@codesourcery.com>
 
 	* testsuite/g++.dg/abi/bitfield5.C: New test.
