--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-02  Michael Koch  <konqueror@gmx.de>
+
+	* java/net/DatagramPacket.java, java/net/MulticsstSocket.java:
+	re-indented documentation.
+
 2002-08-30  Jesse Rosenstock  <jmr@ugcs.caltech.edu>
 
 	* java/util/Calendar.java (getTimeInMillis, getTimeInMillis): Now
