--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-01  Mark Wielaard <mark@klomp.org>
+
+	* gcj.texi: Add chapter about system properties.
+	Fixed some typos.
+
 2002-08-26  Tom Tromey  <tromey@redhat.com>
 
 	* parse.y (try_builtin_assignconv): Allow narrowing primitive
