--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-03  <graham.stott@btinternet.com>
+
+	* expr.c (expand_expr): Remove extraneous comment and code.
+
 2002-08-31  Richard Henderson  <rth@redhat.com>
 
 	* expr.c (block_move_libcall_safe_for_call_parm): Fix thinko.
@@ -2432,7 +2436,7 @@ cp:
 
 	* pa-linux.h (GLOBAL_ASM_OP): Fix typo.
 
-2002-07-31  Graham Stott  <grahams@btinternet.com>
+2002-07-31  Graham Stott  <graham.stott@btinternet.com>
 
 	* config/stormy16/stormy16.h (BSS_SECTION_ASM_OP): Add missing
 	.section prefix.
