* config/i386/i386.md ("femms"): Add "memory" attr "none".
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56745 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,8 @@
-2002-09-03  <graham.stott@btinternet.com>
+2002-09-03  Graham Stott  <graham.stott@btinternet.com>
+
+	* config/i386/i386.md ("femms"): Add "memory" attr "none".
+
+2002-09-03  Graham Stott  <graham.stott@btinternet.com>
 
 	* expr.c (expand_expr): Remove extraneous comment and code.
 
