--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+Tue Sep  3 11:04:26 2002  Nicola Pero  <n.pero@mi.flashnet.it>
+
+	* objc/execute/nil_method-1.m: New testcase.
+
 Sun Sep  1 12:47:39 2002  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* objc/execute/class-tests-1.h (test_class_with_superclass): Call
