* h8300.c (asm_file_start): Corrected optimization comment.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56761 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-03   Arati Dikey  <aratid@kpit.com>
+
+	* h8300.c (asm_file_start): Corrected optimization comment.
+
 2002-09-03  Stan Shebs  <shebs@apple.com>
 
 	* c-lang.c (recognize_objc_keyword): Remove, no longer used.
